--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "netCDF4>=1.5.7",
     "basemap-data-hires>=1.2.1",
     "notebook>=6.4.3",
+    "scipy>=1.7.1",
+    "cartopy>=0.19.0",
 ]
 
 [project.urls]
